# rust-wasm-indexeddb

./: Cargo.toml  README.md  flake.nix  index.html
src/: lib.rs
