[package]
name = "rust-wasm-indexeddb"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.58"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "IdbFactory", "IdbOpenDbRequest", "IdbRequest", "Event", "EventTarget", "IdbDatabase", "IdbObjectStore", "IdbTransaction", "IdbTransactionMode", "IdbTransactionMode"] }
wasm-bindgen-futures = "0.4"